<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_match"
        android:icon="@drawable/ic_trophy"
        android:title="@string/menu_match" />

    <item
        android:id="@+id/action_team"
        android:icon="@drawable/ic_teams"
        android:title="@string/menu_team" />

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorites"
        android:title="@string/menu_favorite" />
</menu>